fix: Improve footer navigation on mobile

--- a/src/bootstrap/layouts/FooterNavigation.module.css
+++ b/src/bootstrap/layouts/FooterNavigation.module.css
@@ -13,6 +13,11 @@
 .link {
     text-decoration: none;
 
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     &:visited {
         color: unset;
     }
